添加轮播功能

--- a/myyhd.html
+++ b/myyhd.html
@@ -706,11 +706,22 @@
                })
            }
 
-           var bindEv
+           var playSlide = function() {
+               var images = document.querySelectorAll('.slide-image')
+               var indicators = document.querySelectorAll('.indicator')
+               for (var i = 0; i < indicators.length; i++) {
+                   indicators[i].addEventListener('mouseover', function(event) {
+                       if (images[1].classList.contains('slide-image-active') === false) {
+                           images[1].classList.add('slide-image-active')
+                       }
+                   })
+               }
+           }
 
            var __main = function() {
                bindEventMouseOver()
                bindEventMouseOut()
+               playSlide()
            }
 
            __main()
