完成轮播图及部分布局

--- a/myyhd.html
+++ b/myyhd.html
@@ -334,6 +334,17 @@
             .slide-image-active {
                 display: block;
             }
+
+            .images-section {
+                margin-left: 0px;
+            }
+
+            .slide-images-container {
+                padding-left: 100px;
+                border: solid 2px red;
+                border-left: none;
+                border-right: none;
+            }
         </style>
     </head>
     <body>
@@ -638,7 +649,7 @@
             </div>
         </header>
         <section>
-            <a href="#"><img src="0image/logo.png" alt=""></a>
+            <a href="#"><img src="image/logo.png" alt=""></a>
             <span class="search-container">
                 <button class="search-button" type="button" name="button">商品</button>
                 <input class="search-field" type="field" name="" value="">
@@ -655,17 +666,17 @@
             </div>
         </section>
 
-        <section>
+        <section class="images-section">
             <div class="slide-images-container">
-                <img class="slide-image slide-image-active" src="0image/slide0.jpg" alt="slide0" data-index="0"/>
-                <img class="slide-image" src="0image/slide1.jpg" alt="slide1" data-index="1"/>
-                <img class="slide-image" src="0image/slide2.jpg" alt="slide2" data-index="2"/>
-                <img class="slide-image" src="0image/slide3.jpg" alt="slide3" data-index="3"/>
-                <img class="slide-image" src="0image/slide4.jpg" alt="slide4" data-index="4"/>
-                <img class="slide-image" src="0image/slide5.jpg" alt="slide5" data-index="5"/>
-                <img class="slide-image" src="0image/slide6.jpg" alt="slide6" data-index="6"/>
-                <img class="slide-image" src="0image/slide7.jpg" alt="slide7" data-index="7"/>
-                <img class="slide-image" src="0image/slide8.jpg" alt="slide8" data-index="8"/>
+                <img class="slide-image slide-image-active" src="image/slide0.jpg" alt="slide0" data-index="0"/>
+                <img class="slide-image" src="image/slide1.jpg" alt="slide1" data-index="1"/>
+                <img class="slide-image" src="image/slide2.jpg" alt="slide2" data-index="2"/>
+                <img class="slide-image" src="image/slide3.jpg" alt="slide3" data-index="3"/>
+                <img class="slide-image" src="image/slide4.jpg" alt="slide4" data-index="4"/>
+                <img class="slide-image" src="image/slide5.jpg" alt="slide5" data-index="5"/>
+                <img class="slide-image" src="image/slide6.jpg" alt="slide6" data-index="6"/>
+                <img class="slide-image" src="image/slide7.jpg" alt="slide7" data-index="7"/>
+                <img class="slide-image" src="image/slide8.jpg" alt="slide8" data-index="8"/>
             </div>
             <div class="slide-indicator-container">
                 <ol>
