完成轮播图布局

--- a/myyhd.html
+++ b/myyhd.html
@@ -320,6 +320,9 @@
                 height: 15px;
                 margin-left: 10px;
                 background-color: #ccc;
+                position: relative;
+                top: -40px;
+                left: 520px;
             }
 
             .slide-indicator-container li:hover {
@@ -340,7 +343,7 @@
             }
 
             .slide-images-container {
-                padding-left: 100px;
+                padding-left: 300px;
                 border: solid 2px red;
                 border-left: none;
                 border-right: none;
